--- a/styles.css
+++ b/styles.css
@@ -806,8 +806,79 @@ html.is-mobile .boxed-option-item.active .number:after,html:not(.is-mobile) .box
 }
 
 
+footer {
+    color: white;
+    background-color: #151E3B;
+    
+}
+
+#footer-menu {
+    grid-area: menu;
+    text-align: left;
+    padding-bottom: 100px;
+}
 
 
+#footer-menu p {
+    padding: 3px;
+    margin: 0px;
+    font-weight: bold;
+    font: normal 14px/.9 StratumBold,Arial,sans-serif;
+}
+
+
+#footer-image {
+    grid-area: image;
+    text-align: right;
+    height: 100px;
+
+}
+
+#footer-image img {
+    height: 100px;
+
+}
+
+#footer-info {
+    grid-area: info;
+    text-align: left;
+    display: inline-flex;
+}
+
+#footer-info p {
+    list-style: none;
+    width: auto;
+    padding-right: 40px;
+    font: normal 14px/.9 StratumBold,Arial,sans-serif;
+}
+
+#footer-socials {
+    grid-area: socials;
+    text-align: right;
+}
+
+#footer-socials ul {
+    list-style: none;
+}
+
+#footer-socials li {
+    display: inline;
+    padding-left: 10px;
+}
+
+.grid-container {
+    padding-top: 50px;
+    padding-left: 100px;
+    padding-right: 100px;
+    display: grid;
+    grid-template-areas: 'menu image'
+    'info socials';
+}
+/* 
+.grid-container div {
+    border: 5px black solid;
+    text-align: center;
+} */
 
 
 
