--- a/styles.css
+++ b/styles.css
@@ -118,7 +118,42 @@ nav {
     top:0;
     width:100%;
     }
+
+    /*navbar*/
+.top-navbar{
+    background-color: rgba(0,0,0,0);
+    color: #fff;
+    padding: 20px;
+    width: 100%;
+    font-family: StratumBold,Arial,sans-serif;
+    font-size: 1.4rem;
+    line-height: .92857;
+    letter-spacing: .01em;
+    text-transform: uppercase;
+    }
     
+    .max-width{
+    max-width: 1300px;
+    padding: 0 80px;
+    margin: auto;
+    }
+    
+    .top-navbar .max-width{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    }
+    
+    .top-navbar li{
+    list-style: none;
+    padding: 14px 16px;
+    }
+    
+
+
+
+
+
 .homeheader {
     background-color: rgba(0, 0, 0, 0.3);
     position: absolute;
@@ -193,7 +228,7 @@ text-align:center;
 
 .Branches {
     position: relative;
-    padding: 10rem 10% 10rem 10%;
+
     background-color:black;
     height: 100vh;
 
@@ -207,35 +242,83 @@ text-align:center;
 
 .stars-container {
     position:absolute;
+    width:100%;
+    height:100vh;
 }
 
-@import "susy";
-@import "compass/reset";
-
-.stars, .twinkling, {
-	position:absolute;
-	display:block;
-	top:0; bottom:0;
-	left:0; right:0;
-	width:100%; height:100%;
-}
-
-.stars {
-	z-index: 0;
-	background: #000 url('https://image.ibb.co/mjnygo/stars.png') repeat top center;
-}
-
-.twinkling{
-	z-index: 1;
-	background:transparent url('https://image.ibb.co/ir1DE8/twinkling.png') repeat top center;
-	animation: move-twink-back 800s linear infinite;
-}
 
 
 @keyframes move-twink-back {
-	from {background-position:0 0;}
-	to {background-position:-10000px 5000px;}
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
 }
+@-webkit-keyframes move-twink-back {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+}
+@-moz-keyframes move-twink-back {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+}
+@-ms-keyframes move-twink-back {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+}
+
+@keyframes move-clouds-back {
+    from {background-position:0 0;}
+    to {background-position:10000px 0;}
+}
+@-webkit-keyframes move-clouds-back {
+    from {background-position:0 0;}
+    to {background-position:10000px 0;}
+}
+@-moz-keyframes move-clouds-back {
+    from {background-position:0 0;}
+    to {background-position:10000px 0;}
+}
+@-ms-keyframes move-clouds-back {
+    from {background-position: 0;}
+    to {background-position:10000px 0;}
+}
+
+.stars, .twinkling, .clouds {
+  position:absolute;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  width:100%;
+  height:100%;
+  display:block;
+}
+
+.stars {
+  background:#000 url(images/stars.png) repeat top center;
+  z-index:0;
+}
+
+.twinkling{
+    background:transparent url(images/twinkling.png) repeat top center;
+    z-index:1;
+  
+    -moz-animation:move-twink-back 600s linear infinite;
+    -ms-animation:move-twink-back 600s linear infinite;
+    -o-animation:move-twink-back 600s linear infinite;
+    -webkit-animation:move-twink-back 600s linear infinite;
+    animation:move-twink-back 600s linear infinite;
+  }
+  
+  .clouds{
+      background:transparent url(images/clouds.png) repeat top center;
+      z-index:3;
+  
+    -moz-animation:move-clouds-back 600s linear infinite;
+    -ms-animation:move-clouds-back 600s linear infinite;
+    -o-animation:move-clouds-back 600s linear infinite;
+    -webkit-animation:move-clouds-back 600s linear infinite;
+    animation:move-clouds-back 600s linear infinite;
+  }
 
 .Branches-content {
     Position:absolute;
@@ -250,6 +333,7 @@ text-align:center;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 10rem;
 }
 
 
@@ -567,7 +651,7 @@ position: relative;
     max-width: 50rem;
     box-sizing: border-box;
       justify-content: center;
-  padding:50px;
+  padding:5.125rem 3.125rem 5.125rem 3.125rem;
 
 }
 
